2009-04-03  Donal K. Fellows  <dkf@users.sf.net>

	* doc/TextLayout.3: [Bug 974421]: Clarified description of how result
	of lookup of a point after end of layout relates to the underlying
	string's length.

2009-04-02  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tests/textTag.test: Ensure the pointer begins outside the window for
	all the tests checking Enter/Leave motion events.

	* library/demos/pendulum.tcl: Use unicode labels
	* library/demos/knightstour.tcl: Use polygon knight on x11.

2009-03-31  Donal K. Fellows  <dkf@users.sf.net>

	* library/demos/mclist.tcl: Added support for arrow indicators to show
	which way a column is being sorted. Corrected determination of which
	fonts to use for measurements.

2009-03-25  Jan Nijtmans  <nijtmans@users.sf.net>

	* doc/wish.1:		Bring doc and demos in line with
	* library/demos/hello:	http://wiki.tcl.tk/812
	* library/demos/rmt
	* library/demos/square
	* library/demos/tcolor
	* library/demos/timer
	* library/demos/widget
	* win/tkWinMenu.c:	Eliminate a few compiler warnings on mingw
	* win/ttkWinXPTheme.c:	Spacing

2009-03-25  Donal K. Fellows  <dkf@users.sf.net>

	* generic/ttk/ttkTheme.c (BuildOptionMap, NewElementClass):
	[Bug 2178820]: Ensure that zero-size allocations don't happen; some
	malloc implementations don't like it at all.

	* win/wish.exe.manifest.in: [Bug 1871101]: Add magic to make Tk not be
	blurred on Vista with large fonts.

2009-03-14  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tk.pc.in (new file):		[Patch 2243962] (hat0)
	* unix/configure.in, unix/Makefile.in: Added support for reporting
	Tk's public build configuration via the pkg-config system. TEA is
	still the official mechanism though, in part because pkg-config is not
	universally supported across all Tk's supported platforms.

2009-03-10  Donal K. Fellows  <dkf@users.sf.net>

	* doc/event.n: Tidy up and improve examples.

2009-03-09  Benjamin Riefenstahl  <b.riefenstahl@turtle-trading.net>
